# assertshape

./: README.md  pyproject.toml
.github/workflows/: release.yml  test-release.yml  unit-tests.yml
assertshape/: __init__.py  assertshape.py  test_assertshape.py
