[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assertshape"
version = "0.0.1"
authors = [
  { name="Steinway Wu", email="steinwaywhw@gmail.com" },
]
description = "Utility for checking n-dim array shapes using Einstein notation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/steinwaywhw/assertshape"
"Bug Tracker" = "https://github.com/steinwaywhw/assertshape/issues"